working api startup with login issue.